--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.9",
-    "aws-sdk": "^2.959.0",
-    "babel-loader": "^8.2.2",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.7",
+    "@babel/preset-env": "^7.16.11",
+    "aws-sdk": "^2.1095.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-source-map-support": "^2.1.3",
     "eslint": "^7.32.0",
-    "serverless": "^2.52.1",
+    "serverless": "^2.72.3",
     "serverless-dynamodb-local": "^0.2.40",
-    "serverless-offline": "^8.0.0",
-    "serverless-webpack": "^5.5.1",
-    "webpack": "^5.48.0",
+    "serverless-offline": "^8.5.0",
+    "serverless-webpack": "^5.6.1",
+    "webpack": "^5.70.0",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.21",
+    "uuid": "^8.3.2"
   }
 }
