--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "serverless": "^2.72.3",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.5.0",
+    "serverless-plugin-typescript": "^2.1.2",
     "serverless-webpack": "^5.6.1",
+    "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-node-externals": "^3.0.0"
   },
